--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -52,7 +52,7 @@ jobs:
             docker run -d --name node-app -p 3000:3000 ${{ secrets.DOCKER_USERNAME }}/node-app:latest
 
 
-name: CI/CD Pipeline for Node.js App
+name: CI-CD 
 
 on:
   push:
