Updated CI/CD pipeline

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
@@ -38,7 +39,15 @@ jobs:
   deploy:
     needs: build
     runs-on: ubuntu-latest
+
     steps:
+      - name: Debug Secrets
+        run: |
+          echo "Checking if secrets are available"
+          echo "SERVER_HOST: ${{ secrets.SERVER_HOST }}"
+          echo "SERVER_USER: ${{ secrets.SERVER_USER }}"
+          echo "Checking SSH Key length: $(echo '${{ secrets.SERVER_SSH_KEY }}' | wc -c)"
+
       - name: SSH into Server and Deploy
         uses: appleboy/ssh-action@master
         with:
@@ -46,6 +55,7 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
+            echo "Connected successfully!"
             docker pull ${{ secrets.DOCKER_USERNAME }}/node-app:latest
             docker stop node-app || true
             docker rm node-app || true
