--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -54,6 +54,7 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
+          timeout: 60s  # Increase timeout
           script: |
             echo "Connected successfully!"
             docker pull ${{ secrets.DOCKER_USERNAME }}/node-app:latest
