--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -1,35 +1,42 @@
-name: Deploy to EC2
+name: - name: Checkout Repository
+        uses: actions/checkout@v3
+
+      - name: Set up SSH Key
+        run: Deploy to EC2
 
 on:
   push:
     branches:
-      - main  # תוכל לשנות את זה לסניף הרצוי
+      - main |
+          mkdir -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+          chmod   # תוכל לשנות את זה לסניף הרצוי
 
 jobs:
   deploy:
-    runs-on: ubuntu-latest
+600 ~/.ssh/id_rsa
+          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+
+      - name    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v3
+      - name:: SSH into Server and Deploy
+        uses: appleboy/ Checkout Repository
+        uses: actions/checkout@ssh-action@master
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSHv3
 
       - name: Set up SSH Key
         run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
-          chmod 600 ~/.ssh/id_rsa
-          ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
-
-      - name: SSH into Server and Deploy
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.SSH_HOST }}
-          username: ${{ secrets.SSH_USER }}
+          mkdir_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 22
           script: |
-            echo "Connected to EC2 successfully!"
-            cd /home/ec2-user/app  # שנה לנתיב הנכון
-            git pull origin main  # מושך עדכונים מה-Repo
-            chmod +x deploy.sh  # אם יש לך סקריפט התקנה
-            ./deploy.sh  # הפעלת הדפלוי
+            echo " -p ~/.ssh
+          echo "${{ secrets.SSH_PRIVATE_KEYConnected to EC2 successfully!"
+            cd /home/ec2-user/app  # Change to the correct path
+            }}" > ~/.ssh/id_rsa
+          chmod 600 ~/.ssh/id_r git pull origin main  # Pull updates from the repo
+            chmod +x deploy.sh  # If you have a deploy script
+            ./deploy.sh  # Run the deploy
